--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,14 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
-<p>Hello World</p>
+
+<%@post.each do |p|%>
+<%=p.title%>
+<%=p.content%>
+<%=p.username%>
+<%end%>
+<form action="/upload" method="POST">
+    <input type="text" name="title">
+    <input type="text" name="username">
+    <input type="text" name="content">
+    <input type="submit">
+</form>
