--- a/app/views/home/best.erb
+++ b/app/views/home/best.erb
@@ -43,17 +43,18 @@
         }
         
         .center{
-            width: 500px;
+            width: 450px;
             height: 700px;
-            z-index: 5;
+            z-index: 3;
             position: relative;
-            left: 33.5%;
-            top: -628px;
+            left: 35%;
+            top: -622px;
             border-radius: 10%;
             border-style: solid;
-            border-color: black;
+            border-color: #fec8d4;
             border-width: thin;
             padding: 10px;
+            overflow: hidden;
         }
         
         
@@ -88,7 +89,7 @@
             left: 5%;
             border-radius: 10%;
              border-style: solid;
-            border-color: black;
+            border-color: #fec8d4;
             border-width: thin;
             padding: 10px;
         }
@@ -107,7 +108,7 @@
             left: 100px;
             border-radius: 10%;
             border-style: solid;
-            border-color: black;
+            border-color: #fec8d4;
             border-width: thin;
             padding: 10px;
         }
@@ -128,7 +129,7 @@
             top: 20px;
             border-radius: 10%;
             border-style: solid;
-            border-color: black;
+            border-color: #fec8d4;
             border-width: thin;
             padding: 10px;
         }
@@ -141,7 +142,7 @@
             left: 42%;
             border-radius: 10%;
              border-style: solid;
-            border-color: black;
+            border-color: #fec8d4;
             border-width: thin;
             padding: 10px;
         }
@@ -150,8 +151,7 @@
             height: 50%;
         }
         
-        
-        
+       
         
     </style>
 </head>
@@ -181,7 +181,7 @@
                     <img class="lb" src="/images/alg-baena-schwa.jpg">
                     </div>
             </div>
-            <div class="number_right">
+            <div class="number_right"><br style="clear:both;"/>
                 <div class="number_right_top">
                     <img class="rt" src="/images/jay-z-and-beyonce.jpg">
                     </div>
