--- a/app/views/home/board.erb
+++ b/app/views/home/board.erb
@@ -30,7 +30,9 @@
         .w3-button {
             background-color: #fce6eb;
         }
-
+        .result {
+            margin: 10px 15px 10px 15px;
+        }
     </style>
 </head>
     
