--- a/app/views/home/board_write.erb
+++ b/app/views/home/board_write.erb
@@ -1,11 +1,23 @@
+<head>
+    <style>
+        p {
+          font-size: 15px;
+          color: #ff7292;
+        }
+    </style>
+</head>
+
+<body>
 <div class='writing-form'>
 
     
     <form action="/write-on-board" method="POST">
         <div class="write title">
+            <p> Title </p>
             <%= text_field_tag :board_title %>
         </div>
         <div class="note editing-area">
+            <p> Tell us anything you want to bring up</p>
             <%= text_area_tag :board_content %>
         </div>
         <input type="submit">
@@ -14,3 +26,4 @@
     
     
 </div>
+</body>
